rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__server__tests__fetch_asset_response_encode_asset_data.snap
---
source: rust/foxglove/src/protocol/v1/server.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x04,
    0x0a,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x64,
    0x61,
    0x74,
    0x61,
]
