rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__server__tests__fetch_asset_response_encode_error_message.snap
---
source: rust/foxglove/src/protocol/v1/server.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x04,
    0x0a,
    0x00,
    0x00,
    0x00,
    0x01,
    0x05,
    0x00,
    0x00,
    0x00,
    0x6f,
    0x68,
    0x20,
    0x6e,
    0x6f,
]
