rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__server__tests__playback_state_encode_paused.snap
---
source: rust/foxglove/src/protocol/v1/server.rs
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x05,
    0x01,
    0x39,
    0x30,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
]
