rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__server__tests__playback_state_encode_playing_with_request_id.snap
---
source: rust/foxglove/src/protocol/v1/server.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x05,
    0x00,
    0x39,
    0x30,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x0e,
    0x00,
    0x00,
    0x00,
    0x69,
    0x2d,
    0x61,
    0x6d,
    0x2d,
    0x61,
    0x2d,
    0x72,
    0x65,
    0x71,
    0x75,
    0x65,
    0x73,
    0x74,
]
