rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__server__tests__service_call_response_encode.snap
---
source: rust/foxglove/src/protocol/v1/server.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x03,
    0x0a,
    0x00,
    0x00,
    0x00,
    0x0c,
    0x00,
    0x00,
    0x00,
    0x04,
    0x00,
    0x00,
    0x00,
    0x6a,
    0x73,
    0x6f,
    0x6e,
    0x7b,
    0x22,
    0x6b,
    0x65,
    0x79,
    0x22,
    0x3a,
    0x20,
    0x22,
    0x76,
    0x61,
    0x6c,
    0x75,
    0x65,
    0x22,
    0x7d,
]
