rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__server__tests__time_encode.snap
---
source: rust/foxglove/src/protocol/v1/server.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x02,
    0xd2,
    0x02,
    0x96,
    0x49,
    0x00,
    0x00,
    0x00,
    0x00,
]
